z-index correction

--- a/web/src/assets/styles/tables.scss
+++ b/web/src/assets/styles/tables.scss
@@ -17,7 +17,7 @@
     background-color: var(--primary-default);
     color: var(--foreground-default) !important;
     font-weight: 200 !important;
-    z-index: 9999;
+    z-index: 1;
   }
 
   .my-thead-clean th {
